# 0519-Course-Machine-Learning

./: .gitignore  0263_exercicio.ipynb  README.md  TODO.org  pyproject.toml
0018_relatorio/: 0052_tarefa04.tex  0097_modeloabnt.tex  0131_conclusao.tex  0199_tarefa01.tex  0315_tarefa02.tex  0365_tarefa05.tex  0404_tarefa03.tex  0428-main.tex  0703_tarefa06.tex
