[tool.poetry]
name = "0519-course-machine-learning"
version = "0.1.0"
description = ""
authors = ["Cristiano Gurgel de Castro <crisgc1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
